extended readme; fixed minor things

--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,10 @@ project/.idea/
 project/.DS_Store
 /ca2_diffusion/x86_64/
 x86_64/
-x86_64/
 */*/x86_64/
 mods/*/x86_64/
 mods/x86_64/
+current_mods/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
