added autocompile functionality

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ project/.DS_Store
 neuronpp/examples/x86_64/
 
 neuronpp/x86_64/
+neuronpp/compiled/x86_64/
 neuronpp/neuronpp/mods/*/x86_64/
 neuronpp/neuronpp/mods/x86_64/
 
