--- a/.travis.yml
+++ b/.travis.yml
@@ -38,5 +38,6 @@ install:
   - pip install -r requirements.txt
   - wget https://neuron.yale.edu/ftp/neuron/versions/v7.7/nrn-7.7.x86_64-linux.deb
   - sudo dpkg -i nrn-7.7.x86_64-linux.deb
+  - export PYTHONPATH=$PYTHONPATH:$/usr/local/nrn/lib/python/
 script:
   - python -m pytest
