--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: python
-sudo: false
+sudo: true
 git:
   depth: false
 
@@ -33,19 +33,11 @@ addons:
 python:
   - "3.6"      # current default Python on Travis CI
   - "3.7"
+  - "3.8"
 install:
   - pip install -r requirements.txt
-  - git clone --branch 7.7.2 https://github.com/neuronsimulator/nrn
-  - cd nrn  
-  - ./build.sh
-  - export NEURON_HOME=~/neuron
-  - ./configure --without-x --with-nrnpython=python3 --prefix=$NEURON_HOME --without-paranrn --without-iv 
-  - make --silent -j4
-  - make --silent install -j4
-  - cd src/nrnpython
-  - python setup.py install
-  - export PATH=$PATH:$NEURON_HOME/x86_64/bin
-  - export PYTHONPATH=$PYTHONPATH:$TRAVIS_BUILD_DIR:$NEURON_HOME/lib/python/
+  - wget https://neuron.yale.edu/ftp/neuron/versions/v7.7/nrn-7.7.x86_64-linux.deb
+  - sudo dpkg -i nrn-7.7.x86_64-linux.deb
+  - export PYTHONPATH=$PYTHONPATH:/usr/local/nrn/lib/python/
 script:
-  - cd $TRAVIS_BUILD_DIR
   - python -m pytest
