--- a/.travis.yml
+++ b/.travis.yml
@@ -19,15 +19,14 @@ addons:
     - cython 
     - libx11-dev 
     - git 
-    #- bison 
     - flex 
     - automake  
     - libtool  
     - libxext-dev 
     - libncurses-dev 
-    #- libopenmpi-dev 
     - make 
 python:
+  - "3.5"
   - "3.6"      # current default Python on Travis CI
   - "3.7"
   - "3.8"
@@ -37,7 +36,7 @@ install:
   - git clone --branch 7.7.2 https://github.com/neuronsimulator/nrn
   - cd nrn
   - ./build.sh
-  - export NEURON_HOME=~/neuron
+  - export NEURON_HOME=$TRAVIS_BUILD_DIR/neuron
   - ./configure --without-x --with-nrnpython=python3 --prefix=$NEURON_HOME --without-paranrn --without-iv
   - make --silent -j4
   - make --silent install -j4
@@ -47,7 +46,4 @@ install:
   - export PYTHONPATH=$PYTHONPATH:$TRAVIS_BUILD_DIR:$NEURON_HOME/lib/python/
 script:
   - cd $TRAVIS_BUILD_DIR
-  - echo $TRAVIS_BUILD_DIR
-  - echo $PATH
-  - echo $PYTHONPATH
   - python -m pytest
