--- a/.travis.yml
+++ b/.travis.yml
@@ -19,13 +19,11 @@ addons:
     - cython 
     - libx11-dev 
     - git 
-    #- bison 
     - flex 
     - automake  
     - libtool  
     - libxext-dev 
     - libncurses-dev 
-    #- libopenmpi-dev 
     - make 
 python:
   - "3.5"
@@ -36,7 +34,7 @@ install:
   - git clone --branch 7.7.2 https://github.com/neuronsimulator/nrn
   - cd nrn
   - ./build.sh
-  - export NEURON_HOME=~/neuron
+  - export NEURON_HOME=$TRAVIS_BUILD_DIR/neuron
   - ./configure --without-x --with-nrnpython=python3 --prefix=$NEURON_HOME --without-paranrn --without-iv
   - make --silent -j4
   - make --silent install -j4
