Unify with travis configuration file

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.5, 3.6, 3.7, 3.8]
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -50,12 +50,13 @@ jobs:
         export PATH=$PATH:$NEURON_HOME/x86_64/bin
         export PYTHONPATH=$PYTHONPATH:$GITHUB_WORKSPACE:$NEURON_HOME/lib/python/ 
       env:
-        NEURON_HOME: $GITHUB_WORKSPACE/NEURON_HOME
+        NEURON_HOME: $HOME/NEURON_HOME
     - name: Test
       run:  |
+        cd ..
         set-env name=PATH::$NEURON_HOME/x86_64/bin
         set-env name=PYTHONPATH::$GITHUB_WORKSPACE:$NEURON_HOME/lib/python/
         python -m pytest
       env:
-        NEURON_HOME: $GITHUB_WORKSPACE/NEURON_HOME
+        NEURON_HOME: $HOME/NEURON_HOME
      
