--- a/.pep8speaks.yml
+++ b/.pep8speaks.yml
@@ -9,6 +9,7 @@ pycodestyle:  # Same as scanner.linter value. Other option is flake8
     ignore:  # Errors and warnings to ignore
         - W504  # line break after binary operator
         - E731  # do not assign a lambda expression, use a def
+        - E741  # ambiguous variable name
 
 no_blank_comment: True  # If True, no comment is made on PR without any errors.
 descending_issues_order: False  # If True, PEP 8 issues in message will be displayed in descending order of line numbers in the file
