--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 data/
 compiled/
+x86_64/
 project/tmp/
 project/inception_dir/
 .idea/
 project/.idea/
 .DS_Store
 project/.DS_Store
+*.out
 
 neuronpp/examples/x86_64/
 
