--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ addons:
     - libtool  
     - libxext-dev 
     - libncurses-dev 
-    - make 
+    - make
 python:
   - "3.5"
   - "3.6"
@@ -33,6 +33,7 @@ python:
 install:
   - export DISPLAY=:0  # workaround for pynput (for keyboard input) to import
   - pip install -r requirements.txt
+  - export PYTHONPATH=$PYTHONPATH:$TRAVIS_BUILD_DIR
 script:
   - cd $TRAVIS_BUILD_DIR
   - python -m pytest
