experiments with travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,5 @@
 language: python
-dist: focal
-
-addons:
-  apt:
-    packages:
-    - python-tk
-    - python-sympy
-    - python-tables 
-    - locales 
-    - wget 
-    - gcc 
-    - g++ 
-    - build-essential 
-    - libncurses-dev 
-    - libpython-dev 
-    - cython 
-    - libx11-dev 
-    - git
-    - flex
-    - libtool
-    - libxext-dev 
-    - libncurses-dev 
+dist: bionic
 python:
   - "3.5"
   - "3.6"
