--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,31 @@
 language: python
-dist: bionic
+sudo: true
+
+addons:
+  apt:
+    packages:
+    - python-tk
+    - python-sympy
+    - python-tables
+    - locales
+    - wget
+    - gcc
+    - g++
+    - build-essential
+    - libncurses-dev
+    - libpython-dev
+    - cython
+    - libx11-dev
+    - git
+    - flex
+    - libtool
+    - libxext-dev
+    - libncurses-dev
 python:
   - "3.5"
   - "3.6"
   - "3.7"
   - "3.8" # current default Python on Travis CI
-
-sudo: true
 install:
   - export DISPLAY=:0  # workaround for pynput (for keyboard input) to import
   - pip install -r requirements.txt
