--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: python
 sudo: true
 services:
-  - xvfb
+  - xvfb  # allow display output for NEURON
 
 python:
-  - "3.8" # current default Python on Travis CI
+  - "3.8"
 install:
   - pip install -r requirements.txt
 script:
