--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: python
 sudo: true
 services:
   - xvfb  # allow display output for NEURON
-
 python:
   - "3.5"
   - "3.6"
@@ -10,5 +9,6 @@ python:
   - "3.8"
 install:
   - pip install -r requirements.txt
+  - pip install neuron
 script:
   - pytest
